# irid

./: .gitignore  COPYRIGHT.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
bad/: Cargo.toml  README.md
bad/src/: main.rs  state.rs
examples/lw01_window/: Cargo.toml
examples/lw01_window/src/: main.rs
examples/lw02_swapchain/: Cargo.toml
examples/lw02_swapchain/src/: main.rs
examples/lw03_pipeline/: Cargo.toml
examples/lw03_pipeline/src/: main.rs
examples/lw04_buffers_indices/: Cargo.toml
examples/lw04_buffers_indices/src/: main.rs
examples/lw05_textures_bind_groups/: Cargo.toml
examples/lw05_textures_bind_groups/src/: main.rs
examples/lw06_uniforms_3d_camera/: Cargo.toml
examples/lw06_uniforms_3d_camera/src/: main.rs
examples/lw07_instancing/: Cargo.toml
examples/lw07_instancing/src/: main.rs
examples/lw08_depth_buffer/: Cargo.toml
examples/lw08_depth_buffer/src/: main.rs
examples/lw09_model_loading/: Cargo.toml  build.rs
examples/lw09_model_loading/assets/: shader.wgsl
examples/lw09_model_loading/src/: main.rs
irid/: Cargo.toml  README.md
irid-app/: Cargo.toml
irid-app/src/: application.rs  lib.rs
irid-assets/: Cargo.toml  README.md
irid-assets-traits/: Cargo.toml
irid-assets-traits/src/: lib.rs
irid-assets/src/: config.rs  configuration.rs  image.rs  lib.rs  model.rs  texture.rs  vertex.rs
irid-common-interface/: Cargo.toml
irid-config/: Cargo.toml  Readme.md
irid-core/: Cargo.toml
irid-core/src/: application.rs  configuration.rs  lib.rs
irid-framework/: Cargo.toml
irid-framework/src/: lib.rs
irid-framework/src/app/: app.rs
irid-framework/src/renderer/: camera.rs  pipeline.rs
irid-render/: Cargo.toml
irid-render/src/: lib.rs  pipeline.rs  render.rs  surface.rs
irid-renderer/: Cargo.toml  README.md
irid-renderer-traits/: Cargo.toml
irid-renderer-traits/src/: lib.rs
irid-renderer/src/: adapter.rs  buffer.rs  camera.rs  config.rs  configuration.rs  device.rs  instance.rs  lib.rs  pipeline.rs  queue.rs  render.rs  renderer.rs  shader.rs  surface.rs  texture.rs  texture_metas.rs  vertex.rs  vertex_buffer.rs
irid-traits/: Cargo.toml
irid-traits/src/: image.rs  lib.rs  vertex.rs
irid-utils/: Cargo.toml
irid-utils/src/: lib.rs
irid-wgpu/: Cargo.toml  README.md
irid-wgpu/src/: lib.rs
irid-wgpu/src/backend/: direct.rs  mod.rs
irid-wgpu/src/util/: init.rs  mod.rs
irid/src/: application.rs  config.rs  configuration.rs  index.rs  instance.rs  lib.rs  listener.rs  renderer.rs  shader.rs  texture.rs  uniform.rs  vertex.rs
irid/src/app/: app.rs  builder.rs  config.rs  listener.rs  mod.rs
irid/src/assets/: image.rs  mod.rs  model.rs
irid/src/camera/: controller.rs  mod.rs
irid/src/meshes/: _uniform.rs  mod.rs  uniform.rs  vertex.rs
irid/src/renderer/: _old_texture.rs  adapter.rs  camera.rs  device.rs  instance.rs  mod.rs  pipeline.rs  renderer.rs  shader.rs  surface.rs  swap_chain.rs  texture.rs  vertex.rs
irid/src/window/: dpi.rs  event.rs  listener.rs  mod.rs  window.rs
irid_app/: Cargo.toml
irid_app/src/: application.rs  config.rs  lib.rs  listener.rs  window.rs
irid_app_interface/: Cargo.toml
irid_app_interface/src/: lib.rs
irid_assets/: Cargo.toml
irid_assets/src/: image.rs  lib.rs  model.rs  texture.rs  vertex.rs
irid_assets_interface/: Cargo.toml
irid_assets_interface/src/: lib.rs
irid_render/: Cargo.toml
irid_render/src/: camera.rs  camera_bind.rs  device.rs  instance.rs  lib.rs  pipeline.rs  queue.rs  renderer.rs  surface.rs  texture_metadata.rs
irid_render/src/utils/: mod.rs
irid_renderer/: Cargo.toml  README.md
irid_renderer/src/: adapter.rs  camera.rs  camera_bind.rs  device.rs  instance.rs  lib.rs  pipeline.rs  queue.rs  renderer.rs  shader.rs  surface.rs  texture_metadata.rs  texture_metadatas.rs
irid_renderer/src/utils/: mod.rs
irid_renderer_interface/: Cargo.toml
irid_renderer_interface/src/: lib.rs
irid_traits/: Cargo.toml
learnwgpu/learnwgpu_01_window/: Cargo.toml
learnwgpu/learnwgpu_01_window/src/: main.rs
learnwgpu/learnwgpu_02_swapchain/: Cargo.toml
learnwgpu/learnwgpu_02_swapchain/src/: main.rs  old_main.rs
learnwgpu/learnwgpu_03_pipeline/: Cargo.toml
learnwgpu/learnwgpu_03_pipeline/src/: main.rs
learnwgpu/learnwgpu_03_pipeline_challenge/src/: challenge.rs
learnwgpu/learnwgpu_04_buffers_indices/: Cargo.toml
learnwgpu/learnwgpu_04_buffers_indices/src/: main.rs
learnwgpu/learnwgpu_05_textures_bind_groups/: Cargo.toml
learnwgpu/learnwgpu_05_textures_bind_groups/src/: main.rs
learnwgpu/learnwgpu_06_uniform_buffers_3d_camera/: Cargo.toml
learnwgpu/learnwgpu_06_uniform_buffers_3d_camera/src/: challenge.rs  main.rs
learnwgpu/learnwgpu_06_uniforms_3d_camera/: Cargo.toml
learnwgpu/learnwgpu_06_uniforms_3d_camera/src/: main.rs
learnwgpu/learnwgpu_07_instancing/: Cargo.toml
learnwgpu/learnwgpu_07_instancing/assets/: shader.wgsl
learnwgpu/learnwgpu_07_instancing/src/: main.rs  state.rs
learnwgpu/learnwgpu_07_instancing/src/assets/shaders/: shader.frag  shader.vert
learnwgpu/learnwgpu_08_depth_buffer/: Cargo.toml
learnwgpu/learnwgpu_08_depth_buffer/src/: main.rs
learnwgpu/learnwgpu_09_model_loading/: Cargo.toml
learnwgpu/learnwgpu_09_model_loading/src/: main.rs
lw_examples/: README
lw_examples/lw01_window/: Cargo.toml
lw_examples/lw01_window/src/: main.rs
lw_examples/lw02_swapchain/: Cargo.toml
lw_examples/lw02_swapchain/src/: main.rs
lw_examples/lw03_pipeline/: Cargo.toml
lw_examples/lw03_pipeline/assets/: shader.wgsl
lw_examples/lw03_pipeline/src/: main.rs
lw_examples/lw04_buffers_indices/: Cargo.toml
lw_examples/lw05_textures_bind_groups/: Cargo.toml
lw_examples/lw06_uniforms_3d_camera/: Cargo.toml
lw_examples/lw07_instancing/: Cargo.toml
lw_examples/lw08_depth_buffer/: Cargo.toml
lw_examples/lw09_model_loading/: Cargo.toml
shaded_sun/: Cargo.toml  README.md
shaded_sun/src/: main.rs
src/: main.rs  state.rs  vertex.rs
src/irid/: bind.rs  device.rs  mod.rs  sampler.rs  shader.rs  texture.rs  uniform.rs  vertex.rs
src/irid/camera/: mod.rs  (+1 more)
(+8 files in other folders)
