[workspace]
resolver = "2"
members = [
    "bad",
    "irid",
    "learnwgpu/learnwgpu_01_window",
    "learnwgpu/learnwgpu_02_swapchain",
    "learnwgpu/learnwgpu_03_pipeline",
    "learnwgpu/learnwgpu_04_buffers_indices",
    "learnwgpu/learnwgpu_05_textures_bind_groups",
    "learnwgpu/learnwgpu_06_uniforms_3d_camera",
    "learnwgpu/learnwgpu_07_instancing",
    "learnwgpu/learnwgpu_08_depth_buffer",
    "learnwgpu/learnwgpu_09_model_loading",
]
