[package]
name = "bad"
version = "0.0.15"
authors = ["CatCode <andrea.postal@gmail.com>"]
edition = "2018"
description = "Black Abyss Dungeon"
publish = false

[dependencies.irid]
path = "../irid"
version = "0.0"

[dependencies]
bytemuck = { version = "1.5", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
wgpu = "0.8"
winit = "0.25"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
shaderc = "0.7"
