[package]
name = "irid-core"
version = "0.1.0"
authors = ["https://github.com/irid-game-framework/irid/graphs/contributors"]
edition = "2021"
rust-version = "1.56"
description = "Irid Game Framework Core"
repository = "https://github.com/irid-game-framework/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
irid-assets = { path = "../irid-assets" }
irid-render = { path = "../irid-render" }
log = "0.4"
thiserror = "1.0"
wgpu = "0.11"
winit = "0.25"
