[package]
name = "irid-assets"
version = "0.1.0"
authors = ["CatCode79 <andrea.postal@gmail.com>"]
edition = "2021"
rust-version = "1.56"
description = "Irid Game Framework Assets"
repository = "https://github.com/CatCode79/irid-framework"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.7", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.9"
image = "0.23"
irid-assets-traits = { path = "../irid-assets-traits" }
irid-renderer-traits = { path = "../irid-renderer-traits" }
log = "0.4"
pollster = "0.2"
tobj = "3.2"
wgpu = "0.11"
winit = "0.25"
