[package]
name = "irid-assets"
version = "0.1.0"
authors = ["https://github.com/irid-game-framework/irid/graphs/contributors"]
edition = "2021"
rust-version = "1.56"
description = "Irid Game Framework Assets"
repository = "https://github.com/irid-game-framework/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bytemuck = { version = "1.7", features = ["derive"] }
image = "0.23"
#log = "0.4"
thiserror = "1.0"
tobj = "3.2"
wgpu = "0.11"
