[package]
name = "irid-framework"
version = "0.0.55"
authors = ["CatCode <andrea.postal@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.7", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.9"
image = "0.23"
log = "0.4"
pollster = "0.2"
tobj = "3.2"
wgpu = "0.11"
winit = "0.25"
