[package]
name = "irid-renderer-traits"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
description = "Irid Game Framework Common Interface"
repository = "https://github.com/CatCode79/irid-framework"
license = "MIT OR Apache-2.0 OR Zlib"
publish = false

[lib]

[dependencies]
wgpu = "0.11"
