[package]
name = "irid-renderer"
version = "0.1.0"
authors = ["https://github.com/irid-game-framework/irid/graphs/contributors"]
edition = "2021"
rust-version = "1.56.1"
description = "Irid Game Framework Renderer"
repository = "https://github.com/irid-game-framework/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bytemuck = { version = "1.7", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.9"
image = "0.23"
irid-assets = { path = "../irid-assets" }
log = "0.4"
pollster = "0.2"
thiserror = "1.0"
tobj = "3.2"
wgpu = "0.11"
winit = "0.25"
