[package]
name = "irid-renderer"
version = "0.0.11"
authors = ["https://github.com/irid-game-framework/irid/graphs/contributors"]
edition = "2018"
rust-version = "1.48"
description = "Irid Game Framework Renderer"
repository = "https://github.com/irid-game-framework/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bytemuck = { version = "1.7", features = ["derive"] }
cgmath = "0.18"
image = "0.23"
irid-assets = { path = "../irid-assets" }
irid-utils = { path = "../irid-utils" }
log = "0.4"
pollster = "0.2"
thiserror = "1.0"
wgpu = "0.11"
winit = "0.25"
