[package]
name = "irid-utils"
version = "0.1.0"
authors = ["https://github.com/irid-game-framework/irid/graphs/contributors"]
edition = "2021"
rust-version = "1.56.1"
description = "Irid Game Framework Utils"
repository = "https://github.com/irid-game-framework/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
