[package]
name = "irid"
version = "0.0.13"
authors = ["https://github.com/irid-game-framework/irid/graphs/contributors"]
edition = "2021"
rust-version = "1.63"
description = "Irid Game Framework"
repository = "https://github.com/irid-game-framework/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
irid_app = { path = "../irid_app" }
irid_assets = { path = "../irid_assets" }
irid_renderer = { path = "../irid_renderer" }
