[package]
name = "irid"
version = "0.0.16"
authors = ["CatCode79"]
edition = "2021"
rust-version = "1.68"
description = "Irid Game Framework"
repository = "https://github.com/CatCode79/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
irid_app = { path = "../irid_app" }
irid_assets = { path = "../irid_assets" }
irid_render = { path = "../irid_render" }
