[package]
name = "irid_app"
version = "0.0.13"
authors = ["CatCode79 https://github.com/CatCode79"]
edition = "2021"
rust-version = "1.63"
description = "Irid Game Framework Application"
repository = "https://github.com/CatCode79/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bytemuck = "1"
#irid_assets = { path = "../irid_assets" }
irid_assets_interface = { path = "../irid_assets_interface" }
irid_renderer = { path = "../irid_renderer" }
log = "0.4"
thiserror = "1"
wgpu = "0.13"
winit = "0.26"
