[package]
name = "irid_app"
version = "0.0.14"
authors = ["CatCode79"]
edition = "2021"
rust-version = "1.64"
description = "Irid Game Framework Application"
repository = "https://github.com/CatCode79/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
irid_assets = { path = "../irid_assets" }
irid_renderer = { path = "../irid_renderer" }

bytemuck = "1"
log = "0.4"
wgpu = "0.14"
winit = "0.27"
