[package]
name = "irid_assets"
version = "0.0.13"
authors = ["CatCode79 https://github.com/CatCode79"]
edition = "2021"
rust-version = "1.63"
description = "Irid Game Framework Assets"
repository = "https://github.com/CatCode79/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
image = "0.24"
irid_assets_interface = { path = "../irid_assets_interface" }
#log = "0.4"
thiserror = "1"
#tobj = "3.2"
wgpu = "0.13"
