[package]
name = "irid_assets"
version = "0.0.16"
authors = ["CatCode79"]
edition = "2021"
rust-version = "1.69"
description = "Irid Game Framework Assets"
repository = "https://github.com/CatCode79/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bytemuck = { version = "1.12", features = ["derive"] }
image_crate = { version = "0.24", package = "image" }
#log = "0.4"
#tobj = "3.2"
wgpu = "0.16"
