[package]
name = "irid_assets_interface"
version = "0.0.12"
authors = ["https://github.com/irid-game-framework/irid/graphs/contributors"]
edition = "2018"
rust-version = "1.48"
description = "Irid Game Framework Assets Interface"
repository = "https://github.com/irid-game-framework/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
image = "0.23"
thiserror = "1.0"
wgpu = "0.12"
