[package]
name = "irid_render"
version = "0.0.15"
authors = ["CatCode79"]
edition = "2021"
rust-version = "1.67"
description = "Irid Game Framework Renderer"
repository = "https://github.com/CatCode79/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
irid_assets = { path = "../irid_assets" }

bytemuck = { version = "1.12", features = ["derive"] }
cgmath = "0.18"
log = "0.4"
pollster = "0.2"
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "4ea3159" }
winit = "0.28"
