[package]
name = "irid_renderer"
version = "0.0.13"
authors = ["https://github.com/irid-game-framework/irid/graphs/contributors"]
edition = "2021"
rust-version = "1.63"
description = "Irid Game Framework Renderer"
repository = "https://github.com/irid-game-framework/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
cgmath = "0.18"
log = "0.4"
irid_assets = { path = "../irid_assets" }
irid_assets_interface = { path = "../irid_assets_interface" }
pollster = "0.2"
thiserror = "1"
wgpu = "0.13"
winit = "0.26"
