[package]
name = "irid_renderer"
version = "0.0.13"
authors = ["CatCode79 https://github.com/CatCode79"]
edition = "2021"
rust-version = "1.63"
description = "Irid Game Framework Renderer"
repository = "https://github.com/irid-game-framework/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
cgmath = "0.18"
irid_assets = { path = "../irid_assets" }
irid_assets_interface = { path = "../irid_assets_interface" }
log = "0.4"
pollster = "0.2"
thiserror = "1"
wgpu = "0.13"
winit = "0.26"
