[package]
name = "irid_renderer"
version = "0.0.14"
authors = ["CatCode79"]
edition = "2021"
rust-version = "1.66"
description = "Irid Game Framework Renderer"
repository = "https://github.com/CatCode79/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
irid_assets = { path = "../irid_assets" }

bytemuck = { version = "1", features = ["derive"] }
cgmath = "0.18"
log = "0.4"
pollster = "0.2"
wgpu = "0.14"
winit = "0.27"
