[package]
name = "irid_renderer_interface"
version = "0.0.12"
authors = ["https://github.com/irid-game-framework/irid/graphs/contributors"]
edition = "2018"
rust-version = "1.48"
description = "Irid Game Framework Renderer Interface"
repository = "https://github.com/irid-game-framework/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cgmath = "0.18"
wgpu = "0.12"
