[package]
name = "lw04_buffers_indices"
version = "0.0.15"
authors = ["CatCode79"]
edition = "2021"
rust-version = "1.64"
description = "based on https://sotrh.github.io/learn-wgpu/beginner/tutorial4-buffer/"
repository = "https://github.com/CatCode79/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
irid = { path = "../../irid" }

env_logger = "0.10"
log = "0.4"
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "4ea3159" }
winit = "0.28"
