[package]
name = "lw08_depth_buffer"
version = "0.0.15"
authors = ["CatCode79"]
edition = "2021"
rust-version = "1.64"
description = "based on https://sotrh.github.io/learn-wgpu/beginner/tutorial8-depth/"
repository = "https://github.com/CatCode79/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
irid = { path = "../../irid" }

env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
winit = "0.28"
