[package]
name = "lw09_model_loading"
version = "0.0.16"
authors = ["CatCode79"]
edition = "2021"
rust-version = "1.69"
description = "based on https://sotrh.github.io/learn-wgpu/beginner/tutorial9-models/"
repository = "https://github.com/CatCode79/irid"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
irid = { path = "../../irid" }

env_logger = "0.10"
log = "0.4"
wgpu = "0.16"
winit = "0.28"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"  # but, it's used anymore?
