[package]
name = "learnwgpu_03_pipeline"
version = "0.0.1"
authors = ["CatCode <andrea.postal@gmail.com>"]
edition = "2018"
description = "based on https://github.com/sotrh/learn-wgpu/tree/0.8/code/beginner/tutorial2-swapchain"

[dependencies]
env_logger = "0.9"
log = "0.4"
wgpu = "0.9"
winit = "0.25"

[dependencies.irid]
path = "../../irid"
version = "0.0"
