[package]
name = "learnwgpu_04_buffers_indices"
version = "0.0.1"
authors = ["CatCode <andrea.postal@gmail.com>"]
edition = "2018"
description = "based on https://sotrh.github.io/learn-wgpu/beginner/tutorial4-buffer/"

[dependencies]
env_logger = "0.9"
log = "0.4"
wgpu = "0.9"
winit = "0.25"

[dependencies.irid]
path = "../../irid"
version = "0.0"
