[package]
name = "learnwgpu_06_uniform_buffers_3d_camera"
version = "0.0.1"
authors = ["CatCode <andrea.postal@gmail.com>"]
edition = "2018"
description = "based on https://sotrh.github.io/learn-wgpu/beginner/tutorial5-textures/#loading-an-image-from-a-file/"

[dependencies]
env_logger = "0.9"
log = "0.4"
wgpu = "0.10"
winit = "0.25"

[dependencies.irid]
path = "../../irid"
version = "0.0"
