[package]
name = "learnwgpu_07_instancing"
version = "0.0.1"
authors = ["CatCode <andrea.postal@gmail.com>"]
edition = "2018"

[dependencies.irid]
path = "../../irid"
version = "0.0"

[dependencies]
bytemuck = { version = "1.5", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
winit = "0.24"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
shaderc = "0.7"
