[package]
name = "learnwgpu_09_model_loading"
version = "0.0.1"
authors = ["CatCode <andrea.postal@gmail.com>"]
edition = "2018"
description = "based on https://sotrh.github.io/learn-wgpu/beginner/tutorial9-models/"

[dependencies]
env_logger = "0.9"
log = "0.4"
wgpu = "0.10"
winit = "0.25"

[dependencies.irid]
path = "../../irid"
version = "0.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
